WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180214
SWServerToContextConnection / SWServerWorker do not need to be ThreadSafeRefCounted
https://bugs.webkit.org/show_bug.cgi?id=180214
Summary
SWServerToContextConnection / SWServerWorker do not need to be ThreadSafeRefC...
Chris Dumez
Reported
2017-11-30 12:22:38 PST
SWServerToContextConnection / SWServerWorker do not need to be ThreadSafeRefCounted. RefCounted is sufficient as there is no longer any multithreading on server side.
Attachments
Patch
(2.70 KB, patch)
2017-11-30 12:23 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-11-30 12:23:30 PST
Created
attachment 328005
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-30 13:42:33 PST
Comment on
attachment 328005
[details]
Patch Clearing flags on attachment: 328005 Committed
r225347
: <
https://trac.webkit.org/changeset/225347
>
WebKit Commit Bot
Comment 3
2017-11-30 13:42:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-30 13:43:27 PST
<
rdar://problem/35781292
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug