SWServerToContextConnection / SWServerWorker do not need to be ThreadSafeRefCounted https://bugs.webkit.org/show_bug.cgi?id=180214

Reviewed by Brady Eidson.

SWServerToContextConnection / SWServerWorker do not need to be ThreadSafeRefCounted.
RefCounted is sufficient as there is no longer any multithreading on server side.

* workers/service/server/SWServerToContextConnection.h:
* workers/service/server/SWServerWorker.h:


Canonical link: https://commits.webkit.org/196201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225347 268f45cc-cd09-0410-ab3c-d52691b4dbfc